[package]
name = "i2c_dummy_device"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.19.0", features =["esp32c3"] }
esp-backtrace = { version = "0.13.0", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "0.10.0", features = ["esp32c3"] }
